# BeeLight-Device

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  format_code.sh  platformio.ini  upload_application.sh
.github/: build.yml
.github/workflows/: build.yml  main.yml
assets/: CMakeLists.txt  enum2icon.csv  generate.bat  generate.sh  png2lvimgdsc  png2lvimgdsc.c
boards/: SMARTRING.json
sim/: CMakeLists.txt  Frame.hpp  beelight_client.cpp  beelight_client.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
src/: BeeLog.hpp  BeelightApp.cpp  BeelightApp.hpp  CMakeLists.txt  Event.cpp  Event.hpp  lv_conf.h  main.cpp  port.hpp
src/ble/: ble_config.cpp
src/com/: BeelightCom.hpp
src/common/: beelog_wrapper.cpp  beelog_wrapper.h  fb_flush.c  fb_flush.h  port_persistency.h
src/emb/: beelog_emb.cpp  lvgl_v9_port.cpp  lvgl_v9_port.h  port_arduino.cpp  port_persistency.cpp  port_persistency_emb.cpp
src/emb/ble/: ble_config.cpp  ble_config.h
src/emb/board/JC3636W518/: esp_panel_board_custom_conf.h  esp_panel_drivers_conf.h
src/emb/board/smartring/: esp_panel_board_supported_conf.h  esp_panel_drivers_conf.h  esp_utils_conf.h
src/model/: InstructionIcon.hpp  NavigationModel.cpp  NavigationModel.hpp  PersistencyModel.cpp  PersistencyModel.hpp
src/sim/: beelog_sim.cpp  port_null_driver.c  port_null_driver.cpp  port_persistency.c  port_persistency_int.c  port_persistency_sim.c  port_persistency_sim_int.c  port_persistency_sim_int.h  port_win.cpp  port_x11.cpp  port_x11_custom_flush.cpp  port_x11_custom_flush.hpp
src/sim/com/: BeelightCom_sim.cpp  BeelightCom_sim.hpp
src/ui/: AbstractScreen.hpp  CurvedLabel.cpp  CurvedLabel.h  Dashboard.cpp  Dashboard.hpp  DirectionIconWidget.cpp  DirectionIconWidget.hpp  ScreenNavigation.cpp  ScreenNavigation.hpp  SplashScreen.cpp  SplashScreen.hpp  UserInputScreen.cpp  UserInputScreen.hpp  ui.cpp  ui.h
src/ui/commissionning/: CommissionBleConfigScreen.cpp  CommissionBleConfigScreen.hpp  CommissionScreens.cpp  CommissionScreens.hpp
src/ui/res/: beelight_logo.c  bob_dobbs_png.c  hand_cursor.c  hand_cursor.xcf  ic_depart.c  ic_destination.c  ic_destination_left.c  ic_destination_right.c  ic_ferry_boat.c  ic_ferry_train.c  ic_fork_left.c  ic_fork_right.c  ic_merge.c  ic_merge_left.c  ic_merge_right.c  ic_road.c  ic_roundabout_clockwise.c  ic_roundabout_counterclockwise.c  ic_roundabout_exit_clockwise.c  ic_roundabout_exit_counterclockwise.c  ic_roundabout_left_clockwise.c  ic_roundabout_left_counterclockwise.c  ic_roundabout_right_clockwise.c  ic_roundabout_right_counterclockwise.c  ic_roundabout_sharp_left_clockwise.c  ic_roundabout_sharp_left_counterclockwise.c  ic_roundabout_sharp_right_clockwise.c  ic_roundabout_sharp_right_counterclockwise.c  ic_roundabout_slight_left_clockwise.c  ic_roundabout_slight_left_counterclockwise.c  ic_roundabout_slight_right_clockwise.c  ic_roundabout_slight_right_counterclockwise.c  ic_roundabout_straight_clockwise.c  ic_roundabout_straight_counterclockwise.c  ic_roundabout_u_turn_clockwise.c  ic_roundabout_u_turn_counterclockwise.c  ic_straight.c  ic_turn_left.c  ic_turn_right.c  ic_turn_sharp_left.c  (+6 more)
test/: CMakeLists.txt  test_Event.cpp  test_EventLVGL.cpp  test_port_persistency_sim.cpp
test/model/: test_NavigationModel.cpp  test_PersistencyModel.cpp
test/stubs/: stub_Event.cpp  stub_ScreenNavigation.cpp  stub_lvgl.cpp  stub_persistency.cpp  stub_port.cpp
test/ui/: test_ScreenNavigation.cpp  test_UserInputScreen.cpp
